--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.zip
+﻿*.zip
 *.pdf
 *.exe
 *.pptx
@@ -11,7 +11,5 @@ OTHER/note.php
 *.rar
 SiteSave/网络安全特训软件安装视频.7z
 SiteSave/网络安全特训软件安装视频/bandicam 2018-02-1 20-39-10-328.mp4
-
-BlockChain/ETH/
 Network/XX-Net-master/
 Note/Server_note.php
