添加壁纸  更新function 及php tp漏洞

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -3,7 +3,7 @@
     // Visit http://wbond.net/sublime_packages/sftp/settings for help
     
     // sftp, ftp or ftps
-    "type": "ftp",
+    // "type": "ftp",
 
     "save_before_upload": true,
     "upload_on_save": true,
@@ -14,10 +14,10 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "47.94.81.150",
-    "user": "blog",
-    "password": "blog2014",
-    "port": "21",
+    // "host": "47.94.81.150",
+    // "user": "blog",
+    // "password": "blog2014",
+    // "port": "21",
     
     "remote_path": "/",
     "ignore_regexes": [
